# logulator

./: .gitignore  CLAUDE.md  README.md  install-desktop.sh  main.py  pyproject.toml
app/: colorizer.py  filter_engine.py  log_writer.py  main_window.py  serial_worker.py  settings.py  theme.py  version.py
app/ui/: __init__.py  about_dialog.py  file_loader.py  file_viewer.py  filter_bar.py  find_bar.py  log_pane.py  serial_panel.py  settings_sidebar.py
data/: logulator.desktop
