[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logulator"
version = "0.1.0"
description = "A cross-platform serial log viewer and analyzer."
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.7.0",
    "pyserial>=3.5",
]

[project.scripts]
logulator = "main:main"

[tool.setuptools]
packages = ["app", "app.ui"]
py-modules = ["main"]

[tool.setuptools.data-files]
"share/applications" = ["data/logulator.desktop"]
"share/icons/hicolor/256x256/apps" = ["icon.png"]
